v1.0.12
ApiSarbideExt v1.0.12: Solucionados varios bugs en custom.py, request_api.py y swagger.json.
